fix(Layout): fix horizontal scroll

--- a/src/app/modules/layout/header/header.component.css
+++ b/src/app/modules/layout/header/header.component.css
@@ -91,7 +91,7 @@
     /* 48em */
     .navigation-bar {
         display: flex;
-        width: 100vw;
+        width: 100%;
     }
     .navigation-bar .left,
     .navigation-bar .right {
